fixed header and content scrollbar issue

--- a/src/hs-components/Layout/PageHeader/style.css
+++ b/src/hs-components/Layout/PageHeader/style.css
@@ -8,9 +8,8 @@
 
 .header-container {
     background-color: #282c34;
-    /* position: fixed; */
     top: 0;
     width: 100%;
     z-index: 500;
-    /* height: 5%; */
+    height: calc(64px- 100%);
 }
